// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Decorator Should able to decorate class multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "info": "Some Info",
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": true,
        "inherit": true,
      },
    },
    Object {
      "otherInfo": "Some Other Info",
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": true,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should able to decorate class using callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "name": "DummyClass",
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": true,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should able to decorate constructor parameter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "info": "Some Info",
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
        ],
        "kind": "Parameter",
        "name": "id",
        "properties": Object {},
        "type": Number,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should able to decorate constructor parameter 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "index": 0,
            "name": "constructor",
            "target": "DummyClass",
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
        ],
        "kind": "Parameter",
        "name": "id",
        "properties": Object {},
        "type": Number,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should able to decorate constructor parameter multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "info": "Some Info",
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
          Object {
            "otherInfo": "Some Other Info",
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
        ],
        "kind": "Parameter",
        "name": "id",
        "properties": Object {},
        "type": Number,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should able to decorate method multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
        Object {
          "otherInfo": "Some Other Info",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should able to decorate method multiple 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
        Object {
          "otherInfo": "Some Other Info",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should able to decorate method parameter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": "Some Info",
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": true,
                "inherit": true,
              },
            },
          ],
          "kind": "Parameter",
          "name": "id",
          "properties": Object {},
          "type": Number,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should able to decorate method parameter multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": "Some Info",
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": true,
                "inherit": true,
              },
            },
            Object {
              "otherInfo": "Some Other Info",
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": true,
                "inherit": true,
              },
            },
          ],
          "kind": "Parameter",
          "name": "id",
          "properties": Object {},
          "type": Number,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should able to decorate method parameter with callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "index": 0,
              "name": "method",
              "target": "DummyClass",
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": true,
                "inherit": true,
              },
            },
          ],
          "kind": "Parameter",
          "name": "id",
          "properties": Object {},
          "type": Number,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should able to merge decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "data",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "Cache",
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": true,
        "inherit": true,
      },
    },
    Object {
      "type": "ParameterProperties",
      Symbol(tinspector:decoratorId): Symbol(paramProp),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should decorate class 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "info": "Some Info",
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": true,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should decorate class, properties and parameter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": true,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "myFunction",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": true,
                "inherit": true,
              },
            },
          ],
          "kind": "Parameter",
          "name": "par",
          "properties": Object {},
          "type": String,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "myProp",
      "set": undefined,
      "type": Object,
      "typeClassification": "Primitive",
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should decorate method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should decorate method 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should decorate method with callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "method": "method",
          "target": "DummyClass",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should decorate method with callback 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "method": "method",
          "target": "DummyClass",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect class with get set 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": get data,
      "kind": "Property",
      "name": "data",
      "set": set data,
      "type": undefined,
      "typeClassification": undefined,
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect class with get set with decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": get data,
      "kind": "Property",
      "name": "data",
      "set": set data,
      "type": Number,
      "typeClassification": "Primitive",
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect class with get set with decorator callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "name": "data",
          "target": DummyClass,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": get data,
      "kind": "Property",
      "name": "data",
      "set": set data,
      "type": Number,
      "typeClassification": "Primitive",
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect class with get set with decorator multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 2,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
        Object {
          "value": 1,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": get data,
      "kind": "Property",
      "name": "data",
      "set": set data,
      "type": Number,
      "typeClassification": "Primitive",
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect class with properties 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "dummyProp",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect class with properties multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 2,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
        Object {
          "value": 1,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "dummyProp",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect class with properties with callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "index": undefined,
          "name": "dummyProp",
          "target": DummyClass,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "dummyProp",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect class with properties with callback in constructor 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "index": 0,
            "name": "constructor",
            "target": DummyClass,
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
        ],
        "kind": "Parameter",
        "name": "dummyProp",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
      Symbol(tinspector:decoratorId): Symbol(paramProp),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "index": 0,
          "name": "constructor",
          "target": DummyClass,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "dummyProp",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect constructor property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "data",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
      Symbol(tinspector:decoratorId): Symbol(paramProp),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect constructor property with decorator 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
        ],
        "kind": "Parameter",
        "name": "data",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
      Symbol(tinspector:decoratorId): Symbol(paramProp),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect constructor property with decorator callback 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "name": "constructor",
            "target": DummyClass,
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
        ],
        "kind": "Parameter",
        "name": "data",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
      Symbol(tinspector:decoratorId): Symbol(paramProp),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "name": "constructor",
          "target": DummyClass,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should inspect constructor property with decorator multiple 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "value": 2,
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
          Object {
            "value": 1,
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
        ],
        "kind": "Parameter",
        "name": "data",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
      Symbol(tinspector:decoratorId): Symbol(paramProp),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 2,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
        Object {
          "value": 1,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;

exports[`Decorator Should not inspect private constructor property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "data",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
      Object {
        "decorators": Array [
          Object {
            "kind": "Ignore",
            Symbol(tinspector:decoratorId): Symbol(ignore),
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": false,
              "inherit": true,
            },
          },
        ],
        "kind": "Parameter",
        "name": "myPrivateField",
        "properties": Object {},
        "type": String,
        "typeClassification": "Primitive",
      },
    ],
  },
  "decorators": Array [
    Object {
      "type": "ParameterProperties",
      Symbol(tinspector:decoratorId): Symbol(paramProp),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "inherit": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": String,
    },
  ],
  "type": DummyClass,
  "typeClassification": "Class",
}
`;
